--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "build": "next build"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "@ant-design/pro-layout": "^6.19.5",
     "antd": "^4.16.1",
     "autoprefixer": "^10.2.6",
     "axios": "^0.21.0",
@@ -36,7 +38,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet-async": "^1.0.9",
-    "react-icons": "^4.1.0",
+    "react-icons": "^4.2.0",
     "react-use": "^17.2.4"
   },
   "devDependencies": {
