--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@ant-design/pro-layout": "^6.19.5",
+    "@next/bundle-analyzer": "^10.2.3",
     "antd": "^4.16.1",
     "autoprefixer": "^10.2.6",
     "axios": "^0.21.0",
@@ -68,6 +69,7 @@
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
     "pretty-quick": "^3.1.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "webpack-bundle-analyzer": "^4.4.2"
   }
 }
